objects/Cash_Logistics_Schedule_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Active_Region__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Group_Email_Addresses__c</fullName>
        <label>External Group Email Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <description>To be deprecated soon.</description>
        <inlineHelpText>To be deprecated soon.</inlineHelpText>
        <label>(Deprecated) Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Job_Name__c</fullName>
        <label>RPS Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Schedule_Time__c</fullName>
        <label>RPS Schedule Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RS_Job_Name__c</fullName>
        <label>RS Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RS_Schedule_Time__c</fullName>
        <label>RS Schedule Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Time__c</fullName>
        <description>A cron string ie.
0 30 00 * * ?
To be deprecated soon.</description>
        <inlineHelpText>A cron string ie.
0 30 00 * * ?
To be deprecated soon.</inlineHelpText>
        <label>(Deprecated) Schedule Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cash Logistics Schedule Setting</label>
    <listViews>
        <fullName>All_Schedules</fullName>
        <columns>DeveloperName</columns>
        <columns>MasterLabel</columns>
        <columns>RS_Job_Name__c</columns>
        <columns>RS_Schedule_Time__c</columns>
        <columns>RPS_Job_Name__c</columns>
        <columns>RPS_Schedule_Time__c</columns>
        <columns>Active_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Schedules</label>
    </listViews>
    <pluralLabel>Cash Logistics Schedule Settings</pluralLabel>
</CustomObject>